--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name= net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://13.124.33.78:3306/AppDev3?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:log4jdbc:mysql://13.124.33.78:3306/app3?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=tmdwns7
+spring.datasource.password=1111
