--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.driver-class-name= net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mysql://13.124.33.78:3306/app3?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=1111
+
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost/app3?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=11111111
